issue #456: upgrage GWT to 2.8.0-rc2